--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ license_file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
